# conan_issue

./: README.md  test.sh
a/: CMakeLists.txt  conanfile.py
a/include/: useless_a.h
a/src/: main.cpp
b/: CMakeLists.txt  conanfile.py
